# Flex_3D

./: README.md
research/ScadController/: CMakeLists.txt  Main.qml  ScadControllerServer.cpp  ScadControllerServer.hpp  ScadGLView.hpp  ScadImage.cpp  ScadImage.hpp  main.cpp
research/localsocket_ipc/LocalSocketIPC/: CMakeLists.txt
research/localsocket_ipc/LocalSocketIPC/client/: CMakeLists.txt  Main.qml  ScadControllerClient.cpp  ScadControllerClient.hpp  main.cpp
research/localsocket_ipc/LocalSocketIPC/server/: CMakeLists.txt  Main.qml  ScadControllerServer.cpp  ScadControllerServer.hpp  main.cpp
research/remote_objects/01_RemoteObjects/: CMakeLists.txt
research/remote_objects/01_RemoteObjects/client/: CMakeLists.txt  Client.cpp  Client.hpp  main.cpp
research/remote_objects/01_RemoteObjects/server/: CMakeLists.txt  ServerController.cpp  ServerController.hpp  main.cpp  servercontroller.rep
research/video_ipc/video_shared_memory/: README.md
research/video_ipc/video_shared_memory/01_SharedMemory/: CMakeLists.txt  config.hpp
research/video_ipc/video_shared_memory/01_SharedMemory/client/: ClientWidget.hpp  main_client.cpp
research/video_ipc/video_shared_memory/01_SharedMemory/server/: TriangleWidget.h  main_server.cpp
research/video_ipc/video_shared_memory/02_SharedMemory/: CMakeLists.txt  config.hpp
research/video_ipc/video_shared_memory/02_SharedMemory/client/: ClientWidget.cpp  Main.qml  main_client.cpp
research/video_ipc/video_shared_memory/02_SharedMemory/server/: TriangleWidget.cpp  TriangleWidget.h  main_server.cpp
research/video_ipc/video_shared_memory/SharedMemory/: CMakeLists.txt  main_client.cpp
research/video_ipc/video_shared_memory/SharedMemory/client/: ClientWidget.cpp  main_client.cpp
research/video_ipc/video_shared_memory/SharedMemory/server/: TriangleWidget.cpp  TriangleWidget.h  main_server.cpp
src/: Backend.cpp  Backend.hpp  Body.qml  BodyCube.qml  CMakeLists.txt  CadScene.qml  CadView3D.qml  DataPanel.qml  EngineQml.cpp  EngineQml.hpp  FileIO.cpp  FileIO.hpp  Main.qml  NewComponentDialog.qml  OriginGizmo.qml  ScadNode.cpp  ScadNode.hpp  main.cpp
src/Flex3D/Cad/: CMakeLists.txt
src/Flex3D/Editors/AceSampleWebEngineEditor/: AceSampleWebEngineEditor.qml  CMakeLists.txt
src/Flex3D/Editors/AceSampleWebViewEditor/: AceSampleWebViewEditor.qml  CMakeLists.txt
src/Flex3D/Editors/AceWebViewEditor/: AceWebViewEditor.qml  CMakeLists.txt
src/Flex3D/Editors/AceWebViewEditor/page/: change.js  ide.html  index.html
src/Flex3D/Editors/AceWebViewEditor/page/button/: button.js
src/Flex3D/Editors/AceWebViewEditor/page/css/: style.css
src/Flex3D/Editors/AceWebViewEditor/page/js/: ide.js
src/Flex3D/Editors/BaseEditor/: BaseEditor.qml  CMakeLists.txt
src/Flex3D/Editors/SimpleEditor/: CMakeLists.txt  SimpleEditor.qml
src/Flex3D/FProcess/: CMakeLists.txt  FProcess.cpp  FProcess.hpp
src/Flex3D/FileIO/: CMakeLists.txt  FileIO.cpp  FileIO.hpp
src/develop_project/: Body8080.qml  CncMill.qml  TestComponent.qml  TestPart.qml  TestRectangle.qml
src/develop_project/BoltM5/: BoltM5.qml
src/develop_project/Komponent1234567/: Komponent1234567.qml  komponent1234567.scad
src/develop_project/TestBoltM8/: TestBoltM8.qml
src/develop_project/TestComp1/: TestComp1.qml
src/develop_project/TestComp10/: Profile_8080.qml  TestComp10.qml
src/develop_project/TestComp2/: TestComp2.qml
src/develop_project/TestComp5/: TestComp5.qml
src/develop_project/TestComp6/: TestComp6.qml
src/develop_project/balsamui/: Profile_8080.qml
src/resources/: ComponentTemplate.scad
